// Vitest Snapshot v1

exports[`Card > rendrer slik den skal med className 1`] = `
<DocumentFragment>
  <section
    class="_section_aded60 className"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;

exports[`Card > rendrer slik den skal med hasLargePadding og hasMargin 1`] = `
<DocumentFragment>
  <section
    class="_section_aded60 _section__largePadding_aded60 _section__marginBotton_aded60"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;

exports[`Card > rendrer slik den skal uten className 1`] = `
<DocumentFragment>
  <section
    class="_section_aded60"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;
